@@ -1,3 +1,8 @@
+2008-09-24  Thomas Weber  <thomas.weber.mail@gmail.com>
+
+	* DLD-FUNCTIONS/regexp.cc (octregexp_list): Retry if match limit
+	is exceeded.
+
 2008-09-24  John W. Eaton  <jwe@octave.org>
 
 	* genprops.awk (emit_declarations): Emit call to set_mode before
